@@ -23,7 +23,7 @@
     NEXT UNLESS etoken;
 %]
   <DIV CLASS="[% evenRow ? 'ListRowEven' : 'ListRow' %]">
-    <SPAN CLASS="NodeName"><A HREF="[%persistentUrl(etoken)%]">
+    <SPAN CLASS="NodeName"><A HREF="[%url(etoken)%]">
     [% entry.0 %]</A></SPAN>
     <SPAN CLASS="NodeDescr">
     [% IF entry.1; entry.1 _ ': ' _ xmlnorm(nodeParam(etoken, entry.1));
